# Forge

./: .env.example  .gitignore  ARCHITECTURE.md  MODEL_CONFIGS.md  Makefile  PLAN.md  README.md  ROADMAP.md  config.yaml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/src/agent_platform/: __init__.py  client.py  config.py  database.py  main.py
backend/src/agent_platform/agent/: __init__.py  factory.py
backend/src/agent_platform/agent/tools/: __init__.py  hitl.py  tools.py
backend/src/agent_platform/api/v1/: acp.py  approvals.py  artifacts.py  auth.py  chat.py  connectors.py  health.py  integration.py  langgraph.py  metrics.py  orgs.py  sandbox.py  sessions.py  skills.py  tasks.py  users.py  webhooks.py  ws.py
backend/src/agent_platform/auth/: __init__.py  dependencies.py  jwt.py  password.py  rbac.py
backend/src/agent_platform/channels/: __init__.py
backend/src/agent_platform/harness/: __init__.py  config.py
backend/src/agent_platform/harness/agents/: __init__.py  acp.py  factory.py  types.py
backend/src/agent_platform/harness/guardrails/: __init__.py  builtin.py  middleware.py  provider.py
backend/src/agent_platform/harness/mcp/: __init__.py  oauth.py
backend/src/agent_platform/harness/memory/: __init__.py
backend/src/agent_platform/harness/middlewares/: __init__.py  clarification_middleware.py  dangling_tool_call_middleware.py  dynamic_context_middleware.py  loop_detection_middleware.py  memory_middleware.py  registry.py  subagent_limit_middleware.py  title_middleware.py  todo_middleware.py  tool_error_handling_middleware.py
backend/src/agent_platform/harness/models/: __init__.py
backend/src/agent_platform/harness/skills/: __init__.py
backend/src/agent_platform/harness/subagents/: __init__.py  executor.py
backend/src/agent_platform/integration/: __init__.py  acp_agent.py  agent_factory.py  channels.py  config.py  mcp.py  mcp_oauth.py  mcp_transport.py  memory.py  middleware_module.py  models.py  skills.py  subagent_executor.py  subagents.py  types.py
backend/src/agent_platform/middleware/: rate_limit.py
backend/src/agent_platform/models/: __init__.py  approval.py  artifact.py  audit_log.py  connector.py  execution_context.py  feedback.py  notification_settings.py  org.py  sandbox.py  session.py  skill.py  task.py  task_event.py  token_usage.py  tool_call.py  user.py
backend/src/agent_platform/runtime/: __init__.py  context.py  events.py  interrupts.py  registry.py
backend/src/agent_platform/sandbox/: __init__.py  docker.py  models.py
backend/src/agent_platform/services/: __init__.py  artifact.py  audit_logger.py  capability_planner.py  feishu.py  hitl_rules.py  notification.py  skill_registry.py  skill_resolver.py  task_queue.py  task_runtime.py  tool_gateway.py
backend/src/agent_platform/skills/: __init__.py
backend/src/agent_platform/templates/: __init__.py  feishu_cards.py
backend/src/agent_platform/workers/: __init__.py  scheduler.py
backend/src/tests/: conftest.py  test_api_endpoints.py  test_approvals.py  test_auth.py  test_health.py  test_notifications.py  test_sandbox.py  test_skill_system.py  test_task_runtime.py  test_tasks.py  test_tool_gateway.py
backend/tests/: test_acp.py  test_channels.py  test_config.py  test_docs_and_configs.py  test_edge_cases.py  test_feishu_webhook.py  test_hitl.py  test_im_mock_loop.py  test_im_runtime.py  test_mcp.py  test_memory.py  test_middleware.py  test_models.py  test_provider_kwargs.py  test_report_parity.py  test_skills.py  test_subagent.py  test_tools.py
(+182 files in other folders)
