[tool.poetry]
name = "agent-platform-backend"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.36"}
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
httpx = "^0.27.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
structlog = "^24.4.0"
asyncpg = "^0.30.0"

# Agent Runtime
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-anthropic = "^0.3.0"
langgraph-checkpoint-postgres = "^2.0.0"
aiodocker = "^0.26.0"
bcrypt = "^4.1.0"

# DeerFlow Integration Dependencies
pyyaml = "^6.0.3"
markdownify = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
